Upgrade Gradle and dependencies to latest
Synchronize build to be consistent with other plugins